removed navbar fixed height so it can be responsive on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 .navbar {
     overflow: initial;
-    max-height: 70px;
     margin-bottom: 0;
     border-radius: 0;
     background-color: #66A25C;
